testing for webpack build process

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>DS2D - JS</title>
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="./bundle.js"></script>
 </head>
 <body>
-
+    <div>
+        <label>DS2D</label>
+    </div>
+    <canvas id="canvas" width="500" height="300"></canvas>
+</body>
 </body>
 </html>
